--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <title>MOSHIFY</title>
 </head>
 
 <body>
     <header>
         <nav class="nav collapsible">
-            <a class="nav__brand" href="/"><img src="images/logo.svg"></a>
+            <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
             <svg class="icon icon--white nav__toggler">
                 <use xlink:href="images/sprite.svg#menu"></use>
             </svg>
@@ -40,7 +40,7 @@
             <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="images/resized/banner.webp 1x, images/resized/banner@2x.webp 2x">
                 <source type="image/png" srcset="images/resized/banner.png 1x, images/resized/banner@2x.png 2x">
-                <img class="hero__image" src="images/banner@2x.png">
+                <img class="hero__image" src="images/banner@2x.png" alt="">
             </picture>
         </div>
     </section>
@@ -152,7 +152,7 @@
             <picture data-aos="zoom-in">
                 <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
                 <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-                <img class="feature__image" src="images/resized/easy@2x.jpg">
+                <img class="feature__image" src="images/resized/easy@2x.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
@@ -170,7 +170,7 @@
             <picture data-aos="zoom-in">
                 <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
                 <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-                <img class="feature__image" src="images/resized/easy@2x.jpg">
+                <img class="feature__image" src="images/resized/easy@2x.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
@@ -188,7 +188,7 @@
             <picture data-aos="zoom-in">
                 <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
                 <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-                <img class="feature__image" src="images/resized/easy@2x.jpg">
+                <img class="feature__image" src="images/resized/easy@2x.jpg" alt="">
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
@@ -206,7 +206,7 @@
             <picture data-aos="zoom-in">
                 <source type="image/webp" srcset="images/resized/easy@2x.webp 2x, images/resized/easy.webp 1x">
                 <source type="image/jpg" srcset="images/resized/easy@2x.jpg 2x, images/resized/easy.jpg 1x">
-                <img class="feature__image" src="images/resized/easy@2x.jpg">
+                <img class="feature__image" src="images/resized/easy@2x.jpg" alt="">
             </picture>
         </article>
     </section>
@@ -320,12 +320,12 @@
     <footer class="block block--dark footer">
         <div class="container grid footer__sections">
             <section class="collapsible  collapsible--expanded footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 1</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="/">Wordpress hosting</a></li>
@@ -337,12 +337,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 2</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="/">Wordpress hosting</a></li>
@@ -357,12 +357,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 3</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="/">Wordpress hosting</a></li>
@@ -377,12 +377,12 @@
                 </div>
             </section>
             <section class="collapsible footer__section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 3</h2>
                     <svg class="icon icon--white collapsible__chevron">
                         <use xlink:href="images/sprite.svg#chevron"></use>
                     </svg>
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li><a href="/">Wordpress hosting</a></li>
@@ -397,10 +397,10 @@
                     </ul>
                 </div>
             </section>
-            <section class="footer__brand">
+            <div class="footer__brand">
                 <img src="images/logo.svg" alt="">
                 <p class="footer__copyright">Copyright 2020 Mosh Hamedani</p>
-            </section>
+            </div>
         </div>
     </footer>
     <script src="js/main.js"></script>
