--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="nav collapsible">
             <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
             <svg class="icon icon--white nav__toggler">
-                <use xlink:href="images/sprite.svg#menu"></use>
+                <use href="images/sprite.svg#menu"></use>
             </svg>
             <ul class="list nav__list collapsible__content">
                 <li class="nav__item"><a href="#">Hosting</a></li>
@@ -40,7 +40,7 @@
             <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="images/resized/banner.webp 1x, images/resized/banner@2x.webp 2x">
                 <source type="image/png" srcset="images/resized/banner.png 1x, images/resized/banner@2x.png 2x">
-                <img class="hero__image" src="images/banner@2x.png" alt="">
+                <img class="hero__image" src="images/resized/banner@2x.png" alt="">
             </picture>
         </div>
     </section>
@@ -53,7 +53,7 @@
             <input type="text" class="input" placeholder="Enter a domain name here...">
             <button class="btn btn--accent">
                 <svg class="icon icon--white">
-                    <use xlink:href="images/sprite.svg#search"></use>
+                    <use href="images/sprite.svg#search"></use>
                 </svg>Search</button>
         </div>
         <ul class="list block-domain__prices">
@@ -141,7 +141,7 @@
             <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href="images/sprite.svg#easy"></use>
+                        <use href="images/sprite.svg#easy"></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Easy to Use</h3>
@@ -159,7 +159,7 @@
             <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href="images/sprite.svg#computer"></use>
+                        <use href="images/sprite.svg#computer"></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Easy to Use</h3>
@@ -177,7 +177,7 @@
             <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href="images/sprite.svg#settings"></use>
+                        <use href="images/sprite.svg#settings"></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Easy to Use</h3>
@@ -195,7 +195,7 @@
             <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
-                        <use xlink:href="images/sprite.svg#clock"></use>
+                        <use href="images/sprite.svg#clock"></use>
                     </svg>
                 </span>
                 <h3 class="feature__heading">Easy to Use</h3>
@@ -225,7 +225,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#snap"></use>
+                                <use href="images/sprite.svg#snap"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -239,7 +239,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#snap"></use>
+                                <use href="images/sprite.svg#snap"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -253,7 +253,7 @@
                     <div class="media">
                         <div class="media__image">
                             <svg class="icon icon--primary">
-                                <use xlink:href="images/sprite.svg#snap"></use>
+                                <use href="images/sprite.svg#snap"></use>
                             </svg>
                         </div>
                         <div class="media__body">
@@ -278,7 +278,7 @@
                         <img src="images/testimonial.jpg" alt="A happy customer with smiling face">
                         <span class="icon-container icon-container--accent">
                             <svg class="icon--small icon--white">
-                                <use xlink:href="images/sprite.svg#quotes"></use>
+                                <use href="images/sprite.svg#quotes"></use>
                             </svg>
                         </span>
                     </div>
@@ -291,7 +291,7 @@
                         <div class="media">
                             <div class="media__image">
                                 <svg class="icon icon--primary quote__line">
-                                    <use xlink:href="images/sprite.svg#line"></use>
+                                    <use href="images/sprite.svg#line"></use>
                                 </svg>
                             </div>
                             <div class="media__body">
@@ -323,7 +323,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 1</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -340,7 +340,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 2</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -360,7 +360,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 3</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
@@ -380,7 +380,7 @@
                 <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">Item 3</h2>
                     <svg class="icon icon--white collapsible__chevron">
-                        <use xlink:href="images/sprite.svg#chevron"></use>
+                        <use href="images/sprite.svg#chevron"></use>
                     </svg>
                 </div>
                 <div class="collapsible__content">
