--- a/playground.html
+++ b/playground.html
@@ -24,7 +24,7 @@
             <input type="text" class="input" placeholder="Enter a domain name here...">
             <button class="btn btn--accent">
                 <svg class="icon icon--white">
-                    <use xlink:href="images/sprite.svg#search"></use>
+                    <use href="images/sprite.svg#search"></use>
                 </svg>Search</button>
         </div>
         <ul class="list block-domain__prices">
