--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="nav collapsible">
-            <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
+            <a arial-label="Moshify" class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
             <svg class="icon icon--white nav__toggler">
                 <use href="images/sprite.svg#menu"></use>
             </svg>
@@ -50,7 +50,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, sint.</p>
         </header>
         <div class="input-group">
-            <input type="text" class="input" placeholder="Enter a domain name here...">
+            <input aria-label="Domain" type="text" class="input" placeholder="Enter a domain name here...">
             <button class="btn btn--accent">
                 <svg class="icon icon--white">
                     <use href="images/sprite.svg#search"></use>
