fixed alignment issue due to Animations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p class="hero__tagline">Deploy your website in less than 60sec</p>
                 <a href="/" class="btn btn--accent btn--stretched">Get Started</a>
             </header>
-            <picture data-aos="zoom-in-left">
+            <picture data-aos="zoom-in">
                 <source type="image/webp" srcset="images/resized/banner.webp 1x, images/resized/banner@2x.webp 2x">
                 <source type="image/png" srcset="images/resized/banner.png 1x, images/resized/banner@2x.png 2x">
                 <img class="hero__image" src="images/resized/banner@2x.png" alt="">
@@ -191,7 +191,7 @@
             </picture>
         </article>
         <article class="grid grid--1x2 feature">
-            <div class="feature__content" data-aos="fade-left">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--primary">
                         <use href="images/sprite.svg#clock"></use>
